[gd_scene load_steps=4 format=3 uid="uid://cjnrfx2hqyimb"]

[ext_resource type="Script" uid="uid://cduqc7e2m2ywv" path="res://shared/ui/container_switcher_prototype/container_switcher.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b8nics8aqtpyx" path="res://shared/assets/placeholder_ui/generic_container_ninepatch.png" id="2"]
[ext_resource type="Theme" uid="uid://dnokfxldtj6pj" path="res://shared/themes/placeholder_button.tres" id="3"]

[node name="ContainerSwitcher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -980.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="PhrasesButton" type="Button" parent="NinePatchRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("3")
toggle_mode = true
text = "Gathered Phrases"

[node name="PortraitButton" type="Button" parent="NinePatchRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("3")
toggle_mode = true
text = "Characters"

[node name="CellButton" type="Button" parent="NinePatchRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("3")
toggle_mode = true
text = "Cells"

[node name="CodeButton" type="Button" parent="NinePatchRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("3")
toggle_mode = true
text = "Code"

[node name="ScrollButton" type="Button" parent="NinePatchRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("3")
toggle_mode = true
text = "Scroll"

[connection signal="toggled" from="NinePatchRect/MarginContainer/HBoxContainer/PhrasesButton" to="." method="_on_phrases_button_toggled"]
[connection signal="toggled" from="NinePatchRect/MarginContainer/HBoxContainer/PortraitButton" to="." method="_on_portrait_button_toggled"]
[connection signal="toggled" from="NinePatchRect/MarginContainer/HBoxContainer/CellButton" to="." method="_on_cell_button_toggled"]
[connection signal="toggled" from="NinePatchRect/MarginContainer/HBoxContainer/CodeButton" to="." method="_on_code_button_toggled"]
[connection signal="toggled" from="NinePatchRect/MarginContainer/HBoxContainer/ScrollButton" to="." method="_on_scroll_button_toggled"]
